// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bar renders with color blast-off 1`] = `
<div
  className="ax-bars ax-bars--up"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--blast-off"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": "1rem",
              "width": undefined,
            }
          }
        >
          <div
            className="ax-bars__bar--solid"
          />
        </div>
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with color crash-course 1`] = `
<div
  className="ax-bars ax-bars--up"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--crash-course"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": "1rem",
              "width": undefined,
            }
          }
        >
          <div
            className="ax-bars__bar--solid"
          />
        </div>
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with color critical-mass 1`] = `
<div
  className="ax-bars ax-bars--up"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--critical-mass"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": "1rem",
              "width": undefined,
            }
          }
        >
          <div
            className="ax-bars__bar--solid"
          />
        </div>
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with color deep-thought 1`] = `
<div
  className="ax-bars ax-bars--up"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--deep-thought"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": "1rem",
              "width": undefined,
            }
          }
        >
          <div
            className="ax-bars__bar--solid"
          />
        </div>
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with color electric-dreams 1`] = `
<div
  className="ax-bars ax-bars--up"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--electric-dreams"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": "1rem",
              "width": undefined,
            }
          }
        >
          <div
            className="ax-bars__bar--solid"
          />
        </div>
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with color fantastic-voyage 1`] = `
<div
  className="ax-bars ax-bars--up"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--fantastic-voyage"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": "1rem",
              "width": undefined,
            }
          }
        >
          <div
            className="ax-bars__bar--solid"
          />
        </div>
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with color giant-leap 1`] = `
<div
  className="ax-bars ax-bars--up"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--giant-leap"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": "1rem",
              "width": undefined,
            }
          }
        >
          <div
            className="ax-bars__bar--solid"
          />
        </div>
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with color ground-control 1`] = `
<div
  className="ax-bars ax-bars--up"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--ground-control"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": "1rem",
              "width": undefined,
            }
          }
        >
          <div
            className="ax-bars__bar--solid"
          />
        </div>
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with color luna-dust 1`] = `
<div
  className="ax-bars ax-bars--up"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--luna-dust"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": "1rem",
              "width": undefined,
            }
          }
        >
          <div
            className="ax-bars__bar--solid"
          />
        </div>
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with color moon-lagoon 1`] = `
<div
  className="ax-bars ax-bars--up"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--moon-lagoon"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": "1rem",
              "width": undefined,
            }
          }
        >
          <div
            className="ax-bars__bar--solid"
          />
        </div>
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with color new-horizon 1`] = `
<div
  className="ax-bars ax-bars--up"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--new-horizon"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": "1rem",
              "width": undefined,
            }
          }
        >
          <div
            className="ax-bars__bar--solid"
          />
        </div>
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with color paradise-lost 1`] = `
<div
  className="ax-bars ax-bars--up"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--paradise-lost"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": "1rem",
              "width": undefined,
            }
          }
        >
          <div
            className="ax-bars__bar--solid"
          />
        </div>
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with color primeval-soup 1`] = `
<div
  className="ax-bars ax-bars--up"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--primeval-soup"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": "1rem",
              "width": undefined,
            }
          }
        >
          <div
            className="ax-bars__bar--solid"
          />
        </div>
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with color serene-sea 1`] = `
<div
  className="ax-bars ax-bars--up"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--serene-sea"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": "1rem",
              "width": undefined,
            }
          }
        >
          <div
            className="ax-bars__bar--solid"
          />
        </div>
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with color space-invader 1`] = `
<div
  className="ax-bars ax-bars--up"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--space-invader"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": "1rem",
              "width": undefined,
            }
          }
        >
          <div
            className="ax-bars__bar--solid"
          />
        </div>
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with color space-oddity 1`] = `
<div
  className="ax-bars ax-bars--up"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--space-oddity"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": "1rem",
              "width": undefined,
            }
          }
        >
          <div
            className="ax-bars__bar--solid"
          />
        </div>
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with color sun-maker 1`] = `
<div
  className="ax-bars ax-bars--up"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--sun-maker"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": "1rem",
              "width": undefined,
            }
          }
        >
          <div
            className="ax-bars__bar--solid"
          />
        </div>
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with color terra-form 1`] = `
<div
  className="ax-bars ax-bars--up"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--terra-form"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": "1rem",
              "width": undefined,
            }
          }
        >
          <div
            className="ax-bars__bar--solid"
          />
        </div>
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with color tiny-clanger 1`] = `
<div
  className="ax-bars ax-bars--up"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--tiny-clanger"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": "1rem",
              "width": undefined,
            }
          }
        >
          <div
            className="ax-bars__bar--solid"
          />
        </div>
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with defaultProps 1`] = `
<div
  className="ax-bars ax-bars--up"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--tiny-clanger"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": "1rem",
              "width": undefined,
            }
          }
        >
          <div
            className="ax-bars__bar--solid"
          />
        </div>
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with fillMode semistriped 1`] = `
<div
  className="ax-bars ax-bars--up"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--tiny-clanger"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": "1rem",
              "width": undefined,
            }
          }
        >
          <div
            className="ax-bars__bar--solid"
          />
          <div
            className="ax-bars__bar--semistriped"
          />
        </div>
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with fillMode solid 1`] = `
<div
  className="ax-bars ax-bars--up"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--tiny-clanger"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": "1rem",
              "width": undefined,
            }
          }
        >
          <div
            className="ax-bars__bar--solid"
          />
        </div>
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with fillMode striped 1`] = `
<div
  className="ax-bars ax-bars--up"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--tiny-clanger"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": "1rem",
              "width": undefined,
            }
          }
        >
          <div
            className="ax-bars__bar--striped"
          />
        </div>
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with labelStrong 1`] = `
<div
  className="ax-bars ax-bars--up"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--tiny-clanger"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": "1rem",
              "width": undefined,
            }
          }
        >
          <div
            className="ax-bars__bar--solid"
          />
        </div>
        <div
          className="ax-bars__bar-label"
        >
          <small
            className="ax-text--size-small ax-text--strong"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with minSize down 1`] = `
<div
  className="ax-bars ax-bars--down"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--tiny-clanger"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": "2rem",
              "width": undefined,
            }
          }
        >
          <div
            className="ax-bars__bar--solid"
          />
        </div>
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with minSize left 1`] = `
<div
  className="ax-bars ax-bars--left"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar"
        onClick={undefined}
        style={
          Object {
            "height": false,
            "width": "50%",
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--tiny-clanger"
          style={
            Object {
              "height": undefined,
              "minHeight": "2rem",
              "minWidth": false,
              "width": false,
            }
          }
        >
          <div
            className="ax-bars__bar--solid"
          />
        </div>
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with minSize right 1`] = `
<div
  className="ax-bars ax-bars--right"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar"
        onClick={undefined}
        style={
          Object {
            "height": false,
            "width": "50%",
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--tiny-clanger"
          style={
            Object {
              "height": undefined,
              "minHeight": "2rem",
              "minWidth": false,
              "width": false,
            }
          }
        >
          <div
            className="ax-bars__bar--solid"
          />
        </div>
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with minSize up 1`] = `
<div
  className="ax-bars ax-bars--up"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--tiny-clanger"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": "2rem",
              "width": undefined,
            }
          }
        >
          <div
            className="ax-bars__bar--solid"
          />
        </div>
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with onClick 1`] = `
<div
  className="ax-bars ax-bars--up"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar ax-bars__bar--clickable"
        onClick={[Function]}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--tiny-clanger"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": "1rem",
              "width": undefined,
            }
          }
        >
          <div
            className="ax-bars__bar--solid"
          />
        </div>
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with showLabel 1`] = `
<div
  className="ax-bars ax-bars--up"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--tiny-clanger"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": "1rem",
              "width": undefined,
            }
          }
        >
          <div
            className="ax-bars__bar--solid"
          />
        </div>
        <div
          className="ax-bars__bar-label"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with size and minSize down 1`] = `
<div
  className="ax-bars ax-bars--down"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar ax-bars__bar--center"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--tiny-clanger"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": false,
              "width": "2rem",
            }
          }
        >
          <div
            className="ax-bars__bar--solid"
          />
        </div>
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with size and minSize left 1`] = `
<div
  className="ax-bars ax-bars--left"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar ax-bars__bar--center"
        onClick={undefined}
        style={
          Object {
            "height": false,
            "width": "50%",
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--tiny-clanger"
          style={
            Object {
              "height": "2rem",
              "minHeight": false,
              "minWidth": false,
              "width": false,
            }
          }
        >
          <div
            className="ax-bars__bar--solid"
          />
        </div>
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with size and minSize right 1`] = `
<div
  className="ax-bars ax-bars--right"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar ax-bars__bar--center"
        onClick={undefined}
        style={
          Object {
            "height": false,
            "width": "50%",
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--tiny-clanger"
          style={
            Object {
              "height": "2rem",
              "minHeight": false,
              "minWidth": false,
              "width": false,
            }
          }
        >
          <div
            className="ax-bars__bar--solid"
          />
        </div>
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with size and minSize up 1`] = `
<div
  className="ax-bars ax-bars--up"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar ax-bars__bar--center"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--tiny-clanger"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": false,
              "width": "2rem",
            }
          }
        >
          <div
            className="ax-bars__bar--solid"
          />
        </div>
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with size down 1`] = `
<div
  className="ax-bars ax-bars--down"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar ax-bars__bar--center"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--tiny-clanger"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": false,
              "width": "2rem",
            }
          }
        >
          <div
            className="ax-bars__bar--solid"
          />
        </div>
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with size left 1`] = `
<div
  className="ax-bars ax-bars--left"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar ax-bars__bar--center"
        onClick={undefined}
        style={
          Object {
            "height": false,
            "width": "50%",
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--tiny-clanger"
          style={
            Object {
              "height": "2rem",
              "minHeight": false,
              "minWidth": false,
              "width": false,
            }
          }
        >
          <div
            className="ax-bars__bar--solid"
          />
        </div>
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with size right 1`] = `
<div
  className="ax-bars ax-bars--right"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar ax-bars__bar--center"
        onClick={undefined}
        style={
          Object {
            "height": false,
            "width": "50%",
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--tiny-clanger"
          style={
            Object {
              "height": "2rem",
              "minHeight": false,
              "minWidth": false,
              "width": false,
            }
          }
        >
          <div
            className="ax-bars__bar--solid"
          />
        </div>
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with size up 1`] = `
<div
  className="ax-bars ax-bars--up"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar ax-bars__bar--center"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--tiny-clanger"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": false,
              "width": "2rem",
            }
          }
        >
          <div
            className="ax-bars__bar--solid"
          />
        </div>
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;
